--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <a href="#" class="lang"><b>UA</b></a>
           <a href="#" class="lang_en">EN</a>
         </div>
+        <button class="burger-menu"><span></span></button>
       </header>
       <main class="main-section">
         <section class="main">
@@ -335,5 +336,6 @@
         </div>
       </div>
     </footer>
+    
   </body>
 </html>
